# ApolloAgent

./: README.md  TEMPORAL_GETTING_STARTED.md  config.yaml  pyproject.toml  requirements.txt  run_gateway.py  test_chain_execution.py  test_comfy_client.py  test_database.py  test_discovery_endpoints.py  test_upload.py  test_upload_download.py  test_workflow_endpoints.sh
chains/: conditional-video-generation.yaml  image-edit-to-video-pipeline.yaml  parallel-video-generation.yaml  sequential_example.yaml
docs/: ARCHITECTURE.md  ComfyUI_API_Documentation.md  LOGGING.md  artifact-database-design.md  artifact-database-implementation.md
examples/: basic_client.py  sdk_usage.py
gateway/: __init__.py  main.py
gateway/api/: __init__.py  servers.py  workflow.py
gateway/core/: __init__.py  comfyui_client.py  load_balancer.py  storage.py
gateway/models/: __init__.py  requests.py  responses.py
sdk/: __init__.py  client.py
temporal_gateway/: README.md  __init__.py  activities_old.py.backup  main.py  track.py  worker.py  workflow_registry.py  workflows.py
temporal_sdk/: __init__.py  client.py
tests/: test_load_balancer.py  test_server.py  test_sync_async_execution.py  test_temporal_comparison.py
workflows/: firstEndTovideo.json  firstEndTovideo_overrides.json  imageSave.json  imageSave_overrides.json  qwen_image_edit.json  qwen_image_edit_overrides.json  video_wan2_2_14B_fun_camera_test.json  video_wan2_2_14B_fun_camera_test_overrides.json  video_wan2_2_14B_i2v.json  video_wan2_2_14B_i2v_overrides.json  video_wan2_2_14B_i2v_overrides.json.bak
(+82 files in other folders)
