[project]
name = "comfyautomate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "structlog>=24.1.0",
    "websocket-client>=1.6.0",
    "temporalio>=1.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "simpleeval>=0.9.13",
]

[tool.uv.workspace]
members = [
    "backend",
]
